crates/cfd2_macros/tests/ui/port_set_fail/wrong_param_type.stderr
error: PortSet derive requires at least one field with #[param], #[field], or #[buffer] attribute
 --> tests/ui/port_set_fail/wrong_param_type.rs:8:12
  |
8 | pub struct TestParams {
  |            ^^^^^^^^^^

warning: unused import: `Time`
 --> tests/ui/port_set_fail/wrong_param_type.rs:3:34
  |
3 | use cfd2::solver::model::ports::{Time, F32};
  |                                  ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
